--- a/src/index.css
+++ b/src/index.css
@@ -183,6 +183,20 @@ h3 {
   }
 } */
 
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.footer h2 {
+  font-size: 2rem;
+  padding: 2rem;
+}
+.footer h2 span {
+  color: #00308f;
+  text-decoration: underline;
+  cursor: pointer;
+}
 @media only screen and (max-width: 700px) {
   html {
     font-size: 80%;
@@ -198,6 +212,9 @@ h3 {
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+  .footer h2 {
+    font-size: 1.5rem;
   }
 }
 
