--- a/src/index.css
+++ b/src/index.css
@@ -94,7 +94,7 @@ html {
 }
 .sidebar .success .buttons {
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   gap: 1rem 5rem;
   padding: 2rem;
 }
